--- a/Lab 5 - skupienia/k-means_exercises.ipynb
+++ b/Lab 5 - skupienia/k-means_exercises.ipynb
@@ -80,7 +80,8 @@
     "In the exercise above we set the number of features arbitrarily. \n",
     "\n",
     "**Question** How can we find the optimal number of attributes in machine learning problems?\n",
-    "\n"
+    "\n",
+    "*moja odpowiedź*\n"
    ]
   },
   {
@@ -91,7 +92,9 @@
     "\n",
     "**Question** What is clustering? What can we achieve with clustering?\n",
     "\n",
-    "**Question** What clustering algorithms do you know?"
+    "**Question** What clustering algorithms do you know?\n",
+    "\n",
+    "*moja odpowiedź*"
    ]
   },
   {
@@ -102,7 +105,20 @@
     "\n",
     "**Question** What are the following steps of the k-means algorithm?\n",
     "\n",
-    "**Question** How can we choose the initial clusters?\n"
+    "**Question** How can we choose the initial clusters?\n",
+    "\n",
+    "*moja odpowiedź*\n",
+    "\n",
+    "1. Inicjalizacja centroid\n",
+    "2. Przypisanie danych do najbliższej centroidy\n",
+    "3. Przeliczenie nowych centroid (średnia punktów danego klastra)\n",
+    "4. Powtarzać 2-3 aż do określonego warunku końca (np. zmiany mniejszej od zadanego progu, lub ilości iteracji)\n",
+    "\n",
+    "\n",
+    "Jak wybierać?\n",
+    "- wiedza ekspercka (narzucone z góry dla algorytmu)\n",
+    "- losowo (albo punkt z przestrzeni, albo losowa dana\n",
+    "- wybrać widoczne odstające przypadki (outliers)\n"
    ]
   },
   {
@@ -131,12 +147,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.118033988749895 6.103277807866851\n",
+      "2.8284271247461903 4.47213595499958\n",
+      "4.716990566028302 2.5\n",
+      "(1.8333333333333333, 2.0)\n",
+      "(4.25, 6.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def dist(p1, p2):\n",
+    "    return math.sqrt((p2[0] - p1[0]) ** 2 + (p2[1] - p1[1]) ** 2)\n",
+    "\n",
+    "def mean_point(plist):\n",
+    "    sum_x = sum(point[0] for point in plist)\n",
+    "    sum_y = sum(point[1] for point in plist)\n",
+    "    mean_x = sum_x / len(plist)\n",
+    "    mean_y = sum_y / len(plist)\n",
+    "    return mean_x, mean_y\n",
+    "\n",
+    "p1 = (1.0, 1.0)\n",
+    "p2 = (1.5, 2.0)\n",
+    "p3 = (3.0, 3.0)\n",
+    "p4 = (5.0, 7.0)\n",
+    "p5 = (3.5, 5.0)\n",
+    "\n",
+    "d21 = dist(p2, p1)\n",
+    "d31 = dist(p3, p1)\n",
+    "d51 = dist(p5, p1)\n",
+    "\n",
+    "d24 = dist(p2, p4)\n",
+    "d34 = dist(p3, p4)\n",
+    "d54 = dist(p5, p4)\n",
+    "\n",
+    "print(d21, d24)\n",
+    "print(d31, d34)  # punkt 3 należy do klastra C2\n",
+    "print(d51, d54)  # punkt 5 należy do klastra C2\n",
+    "\n",
+    "# C1:  S1, S2, S3\n",
+    "# C2: S4, S5\n",
+    "\n",
+    "# nowe centroidy\n",
+    "c1 = mean_point([p1, p2, p3])\n",
+    "print(c1) #(1.83, 2.0)\n",
+    "c2 = mean_point([p4, p5])\n",
+    "print(c2) #(4.25, 6.0)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question** When the algorithm should stop?\n",
     "\n",
-    "**Question** What advantages and disadvantages of k-means clustering can you find?"
+    "**Question** What advantages and disadvantages of k-means clustering can you find?\n",
+    "\n",
+    "\n",
+    "*moja odpowiedź*\n",
+    "\n",
+    "Jak w opisie wyżej, np. po określonej ilości iteracji, lub gdy zmiany centroid nie przynoszą znaczących efektów (np. centroida przesuwa się o marginalnie małe wartości, lub nie zmieniają się elementy należące do danego klastra)\n",
+    "\n",
+    "Zalety:\n",
+    "+ Prostota (a przez to wydajność) rozwiązania\n",
+    "+ Skalowalność (dodanie nawet dużej ilości danych nie jest problemem\n",
+    "+ popularność\n",
+    "\n",
+    "Wady:\n",
+    "- Czułość na wartości inicjalizujące (pierwsze centroidy i ilość klastrów)\n",
+    "- założenie kolistych klastrów\n",
+    "- czułość na outlier'y\n",
+    "- problem wielowymiarowych danych (klaster danych zbliżonych na jednym wymiarze nie będzie stworzony z racji na ogromne dystanse na innych wymiarach)"
    ]
   },
   {
