Lab 5 questions + homework started

--- a/Lab 5 - skupienia/k-means_exercises.ipynb
+++ b/Lab 5 - skupienia/k-means_exercises.ipynb
@@ -12,8 +12,10 @@
     "\n",
     "**Question** How can we reduce the number of attributes in classification problems?\n",
     "\n",
-    "*moja odpowiedź*\n",
-    "# todo\n"
+    "*Nasza odpowiedź*\n",
+    "\n",
+    "Wraz ze wzrostem liczby wymiarów potrzeba wykładniczego wzrostu przykładów uczących, więc warto ograniczać liczbę wymiarów aby osiągnąć jak najlepszy stosunek liczby przykładów uczących\n",
+    "\n"
    ]
   },
   {
@@ -93,7 +95,7 @@
     "\n",
     "**Question** How can we find the optimal number of attributes in machine learning problems?\n",
     "\n",
-    "*moja odpowiedź*\n",
+    "*Nasza odpowiedź*\n",
     "\n",
     "# todo"
    ]
@@ -108,7 +110,7 @@
     "\n",
     "**Question** What clustering algorithms do you know?\n",
     "\n",
-    "*moja odpowiedź*\n",
+    "*Nasza odpowiedź*\n",
     "# todo"
    ]
   },
@@ -230,7 +232,7 @@
     "**Question** What advantages and disadvantages of k-means clustering can you find?\n",
     "\n",
     "\n",
-    "*moja odpowiedź*\n",
+    "*Nasza odpowiedź*\n",
     "\n",
     "Jak w opisie wyżej, np. po określonej ilości iteracji, lub gdy zmiany centroid nie przynoszą znaczących efektów (np. centroida przesuwa się o marginalnie małe wartości, lub nie zmieniają się elementy należące do danego klastra)\n",
     "\n",
@@ -393,7 +395,7 @@
     "\n",
     "**Question** What can we do when we want to reduce the number of features in unsupervised problems?\n",
     "\n",
-    "*Moja odpowiedz*\n",
+    "*Nasza odpowiedz*\n",
     "# todo"
    ]
   },
