--- a/Lab 5 - skupienia/k-means_exercises.ipynb
+++ b/Lab 5 - skupienia/k-means_exercises.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Autorzy sprawozdania: Julia Samp i Wojciech Kot\n",
+    "\n",
     "# 1. Attribute selection in classification problems\n",
     "\n",
     "### Curse of dimensionality\n",
@@ -14,8 +16,12 @@
     "\n",
     "*Nasza odpowiedź*\n",
     "\n",
-    "Wraz ze wzrostem liczby wymiarów potrzeba wykładniczego wzrostu przykładów uczących, więc warto ograniczać liczbę wymiarów aby osiągnąć jak najlepszy stosunek liczby przykładów uczących\n",
-    "\n"
+    "Wraz ze wzrostem liczby wymiarów potrzeba wykładniczego wzrostu przykładów uczących. Warto ograniczać liczbę wymiarów, aby osiągnąć jak najlepszy stosunek liczby przykładów uczących.\n",
+    "\n",
+    "Sposoby na ograniczanie atrybutów:\n",
+    "- wiedza ekspercka\n",
+    "- korelacja między atrybutami\n",
+    "- niska wariancja (mało się zmieniają)"
    ]
   },
   {
@@ -97,7 +103,9 @@
     "\n",
     "*Nasza odpowiedź*\n",
     "\n",
-    "# todo"
+    "- metodą prób i błędów (brute force)\n",
+    "- połowienie przedziału\n",
+    "- algorytmy zachłanne (usuwanie najgorszych aż nie będzie poprawy/dodawanie najlepszych aż nie będzie poprawy)"
    ]
   },
   {
@@ -111,7 +119,12 @@
     "**Question** What clustering algorithms do you know?\n",
     "\n",
     "*Nasza odpowiedź*\n",
-    "# todo"
+    "\n",
+    "grupowanie - problem nienadzorowanym w którym nie ma klasy decyzyjnem. Celem jest znalezienie podobieństw, trudność w określeniu poprawności rozwiązania\n",
+    "Algorytmy grupowania:\n",
+    "- K-means (odległościowe)\n",
+    "- dbscan (gęstościowe)\n",
+    "- aglomeracyjne (hierarchiczne)"
    ]
   },
   {
@@ -124,18 +137,18 @@
     "\n",
     "**Question** How can we choose the initial clusters?\n",
     "\n",
-    "*Moja odpowiedź*\n",
+    "*Nasza odpowiedź*\n",
     "\n",
     "1. Inicjalizacja centroid\n",
     "2. Przypisanie danych do najbliższej centroidy\n",
     "3. Przeliczenie nowych centroid (średnia punktów danego klastra)\n",
-    "4. Powtarzać 2-3 aż do określonego warunku końca (np. zmiany mniejszej od zadanego progu, lub ilości iteracji)\n",
+    "4. Powtarzać 2-3 aż do określonego warunku końca (np. zmiany mniejszej od zadanego progu lub ilości iteracji)\n",
     "\n",
     "\n",
-    "Jak wybierać?\n",
+    "Jak wybierać początkowe centroidy?\n",
     "- wiedza ekspercka (narzucone z góry dla algorytmu)\n",
-    "- losowo (albo punkt z przestrzeni, albo losowa dana\n",
-    "- wybrać widoczne odstające przypadki (outliers)\n"
+    "- losowo (albo punkt z przestrzeni albo losowa dana)\n",
+    "- wybrać widoczne dalekie od siebie przypadki (outliers, kmeans++)\n"
    ]
   },
   {
@@ -234,18 +247,21 @@
     "\n",
     "*Nasza odpowiedź*\n",
     "\n",
-    "Jak w opisie wyżej, np. po określonej ilości iteracji, lub gdy zmiany centroid nie przynoszą znaczących efektów (np. centroida przesuwa się o marginalnie małe wartości, lub nie zmieniają się elementy należące do danego klastra)\n",
+    "Przykładowe warunki zakończenia algorytmu:\n",
+    "- po określonej ilości iteracji\n",
+    "- zmiany centroid nie przynoszą znaczących efektów (np. centroida przesuwa się o marginalnie małe wartości, lub nie zmieniają się elementy należące do danego klastra)\n",
     "\n",
     "Zalety:\n",
     "+ Prostota (a przez to wydajność) rozwiązania\n",
-    "+ Skalowalność (dodanie nawet dużej ilości danych nie jest problemem\n",
+    "+ Skalowalność (dodanie nawet dużej ilości danych nie jest problemem)\n",
     "+ popularność\n",
     "\n",
     "Wady:\n",
-    "- Czułość na wartości inicjalizujące (pierwsze centroidy i ilość klastrów)\n",
+    "- Ccułość na wartości inicjalizujące (pierwsze centroidy i ilość klastrów)\n",
     "- założenie kolistych klastrów\n",
-    "- czułość na outlier'y\n",
-    "- problem wielowymiarowych danych (klaster danych zbliżonych na jednym wymiarze nie będzie stworzony z racji na ogromne dystanse na innych wymiarach)"
+    "- problem wielowymiarowych danych (klaster danych zbliżonych na jednym wymiarze nie będzie stworzony z racji na ogromne dystanse na innych wymiarach)\n",
+    "- trzeba wiedzieć ile grup trzeba stworzyć\n",
+    "- duża podatność na punkty odstające"
    ]
   },
   {
@@ -396,7 +412,9 @@
     "**Question** What can we do when we want to reduce the number of features in unsupervised problems?\n",
     "\n",
     "*Nasza odpowiedz*\n",
-    "# todo"
+    "\n",
+    "- analiza korelacji między zmiennymi\n",
+    "- próg dla wariancji danej kolumny"
    ]
   },
   {
@@ -698,7 +716,7 @@
     "labels = kmeans.fit_predict(data)\n",
     "centroids = kmeans.cluster_centers_\n",
     "clusters = [data[labels == i] for i in range(3)]\n",
-    "# print(clusters)"
+    "# print(clusters)\n"
    ]
   },
   {
