Julka sprawdź czy homework wygląda git

--- a/Lab 5 - skupienia/k-means_exercises.ipynb
+++ b/Lab 5 - skupienia/k-means_exercises.ipynb
@@ -131,8 +131,7 @@
     "\n",
     "*Nasza odpowiedź*\n",
     "\n",
-    "**Grupowanie** - problem nienadzorowanym w którym nie ma klasy decyzyjnem. Celem jest znalezienie podobieństw, trudność w określeniu poprawności rozwiązania\n",
-    "\n",
+    "grupowanie - problem nienadzorowanym w którym nie ma klasy decyzyjnem. Celem jest znalezienie podobieństw, trudność w określeniu poprawności rozwiązania\n",
     "Algorytmy grupowania:\n",
     "- K-means (odległościowe)\n",
     "- dbscan (gęstościowe)\n",
@@ -269,11 +268,10 @@
     "+ popularność\n",
     "\n",
     "Wady:\n",
-    "- Czułość na wartości inicjalizujące (pierwsze centroidy i ilość klastrów)\n",
     "- czułość na wartości inicjalizujące (pierwsze centroidy i ilość klastrów)\n",
     "- założenie kolistych klastrów\n",
     "- problem wielowymiarowych danych (klaster danych zbliżonych na jednym wymiarze nie będzie stworzony z racji na ogromne dystanse na innych wymiarach)\n",
-    "- trzeba wiedzieć, ile grup trzeba stworzyć\n",
+    "- trzeba wiedzieć ile grup trzeba stworzyć\n",
     "- duża podatność na punkty odstające"
    ]
   },
