--- a/Lab 6 - regresje/logistic_regression.ipynb
+++ b/Lab 6 - regresje/logistic_regression.ipynb
@@ -19,7 +19,10 @@
    "source": [
     "## 1. Logistic regression\n",
     "\n",
-    "**Question** What is logistic regression? Does it really solve the regression problems?"
+    "**Question** What is logistic regression? Does it really solve the regression problems?\n",
+    "\n",
+    "*Nasza odpowiedź*\n",
+    "Rozwiązuje problem klasyfikacji binarnej (jedna jest sukcesem a druga jest porażką). Opiera się na dwóch funkcjach, na podstawie której szacujemy prawdopodobieństwo."
    ]
   },
   {
