logistic regression in the works

--- a/Lab 6 - regresje/logistic_regression.ipynb
+++ b/Lab 6 - regresje/logistic_regression.ipynb
@@ -92,16 +92,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hours = [0.5, 0.75, 1, 1.25, 1.5, 1.75, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 4, 4.25, 4.5, 4.75, 5, 5.5]\n",
-    "hours = np.array(hours).reshape(-1, 1)\n",
-    "passed = [0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1]"
+    "hours = np.array([0.5, 0.75, 1, 1.25, 1.5, 1.75, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 4, 4.25, 4.5, 4.75, 5, 5.5])\n",
+    "passed = np.array([0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1])\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(hours, passed, color='r', label=\"Passed (1) or Failed (0)\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use the scatter plot to visualize our data. Can you intuitively find a threshold - after how long studying students usually pass the test?"
+    "Let's use the scatter plot to visualize our data. Can you intuitively find a threshold - after how long studying students usually pass the test?\n",
+    "\n",
+    "*nasza odpowiedź*\n",
+    "\n",
+    "powyżej 2.5h uczenia się daje dobre szanse na zdanie, a powyżej 4 daje (niemal) pewność"
    ]
   },
   {
@@ -131,13 +137,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = LogisticRegression()\n",
+    "model.fit(hours.reshape(-1, 1), passed)\n",
+    "\n",
+    "intercept = model.intercept_[0]\n",
+    "coefficient = model.coef_[0][0]\n",
+    "\n",
+    "print(f\"Intercept: {intercept}\")\n",
+    "print(f\"Coefficient: {coefficient}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question** Having the coefficients how can we determine what is the probability that student who studied for 4.25h will pass the test?\n",
+    "\n",
+    "*Tak, mamy nawet na to podany wyżej wzór. A poniżej zaimplementowaną funkcję!*\n",
     "\n",
     "**Task** Write the body of function which calculates this probability having the $\\beta_0$ and $\\beta_1$ coefficients and the study time (x). Using this function and coefficients obtained with previous task find the answer for previous question (the probability of passing the test after 4.25 hours of studying). <br/>\n",
     "_Tip: np.exp() function can be useful_"
@@ -150,8 +167,7 @@
    "outputs": [],
    "source": [
     "def calculate_probability(beta_0, beta_1, x):\n",
-    "    #TODO\n",
-    "    return 0\n",
+    "    return 1 / (1 + np.exp(-(beta_0 + beta_1 * x)))\n",
     "\n",
     "#TODO fill with regression coefficients from previours task\n",
     "calculate_probability(0, 0, 4.25)"
@@ -161,7 +177,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task** Let's visualize the probability function - p(studying hours), to your previous scatter add a line showing the relation between studying time and the probability of passing. Can you see something interesting about this function? Do you know how this type of function is called?"
+    "**Task** Let's visualize the probability function - p(studying hours), to your previous scatter add a line showing the relation between studying time and the probability of passing. Can you see something interesting about this function? Do you know how this type of function is called?\n",
+    "\n",
+    "*Sigmoida, Funkcja sigmoidalna -> widać coś na kształt rozciągniętej litery s."
    ]
   },
   {
@@ -169,7 +187,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_values = np.linspace(0, 6, 100)\n",
+    "y_values = calculate_probability(intercept, coefficient, x_values)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(hours, passed, color='red', label='Observed Data (Pass=1, Fail=0)')\n",
+    "plt.plot(x_values, y_values, color='blue', label='Logistic Function (Probability)', linewidth=2)\n",
+    "plt.title(\"Probability of Passing vs Study Hours\")\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +211,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "study_time = np.array([[4.25]])\n",
+    "probabilities = model.predict_proba(study_time)\n",
+    "print(probabilities)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +229,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prediction = model.predict(study_time)\n",
+    "print(prediction) # 1 oznacza passed, 0 oznacza failed"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO add column\n",
+    "#done add column\n",
+    "data['intercept'] = 1\n",
     "data.head()"
    ]
   },
@@ -255,13 +290,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_data = data.sample(n=100, random_state=42)  # Random 100 rows\n",
+    "train_data = data.drop(test_data.index)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the scikit learn implementation of te logistic regression to build the model on the training set. What are the obtained regression coefficients?"
+    "Use the scikit learn implementation of the logistic regression to build the model on the training set. What are the obtained regression coefficients?"
    ]
   },
   {
