logistic regression -możesz sprawdzać Julka i będzie do wysłania.

--- a/Lab 6 - regresje/logistic_regression.ipynb
+++ b/Lab 6 - regresje/logistic_regression.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = data.sample(n=100, random_state=42)  # Random 100 rows\n",
+    "test_data = data.sample(n=100, random_state=00)  # Random 100 rows\n",
     "train_data = data.drop(test_data.index)"
    ]
   },
@@ -310,13 +310,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train = train_data.drop(columns=['Class'])\n",
+    "y_train = train_data['Class']\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "intercept = model.intercept_[0]\n",
+    "coefficients = model.coef_[0]\n",
+    "print(intercept)\n",
+    "print(coefficients)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now, evaluate your model on the test examples. Classify the test examples, find the probabilitiy of diabetes desease for each test case and the overall accuracy score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "X_test = test_data.drop(columns=['Class'])\n",
+    "y_test = test_data['Class']\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_prob = model.predict_proba(X_test)[:, 1]\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "0.85 accuracy score. Chociaż to może być zawyżone lub zaniżone przez random_state który wybiera dane do zbioru testowego i treningowego ;)"
    ]
   },
   {
