--- a/Lab 6 - regresje/regression.ipynb
+++ b/Lab 6 - regresje/regression.ipynb
@@ -65,7 +65,6 @@
    "outputs": [],
    "source": [
     "columns = ['cylinders', 'displacement', 'horsepower', 'weight', 'acceleration', 'model_year', 'origin', 'mpg']\n",
-    "\n",
     "# done Iterate through the columns (attributes) in our dataset and draw their histograms.\n",
     "for col in range(len(columns)):\n",
     "    plt.figure(figsize=(6, 4))\n",
@@ -74,7 +73,8 @@
     "    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "    plt.show()\n",
     "# Which attributes can be potentially more interesting in further analysis? \n",
-    "# todo"
+    "# todo\n",
+    "data.columns = columns #na potem, żeby było po nazwach a nie indeksach ;)"
    ]
   },
   {
@@ -100,15 +100,8 @@
    "source": [
     "def LinearRegressionOne(x, y):\n",
     "    #done write your linear regression function\n",
-    "    mean_x = np.mean(x)\n",
-    "    mean_y = np.mean(y)\n",
-    "\n",
-    "    numerator = np.sum((x - mean_x) * (y - mean_y))\n",
-    "    denominator = np.sum((x - mean_x) ** 2)\n",
-    "\n",
-    "    b = numerator / denominator\n",
-    "    a = mean_y - b * mean_x\n",
-    "\n",
+    "    a = np.sum((x - np.mean(x)) * (y - np.mean(y))) / np.sum((x - np.mean(x)) ** 2)\n",
+    "    b = np.mean(y) - a * np.mean(x)\n",
     "    return a,b"
    ]
   },
@@ -118,9 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a, b = LinearRegressionOne(data[2], data[7]) # TODO run your function on attributes 'horsepower' and 'mpg'\n",
-    "Y = a + b * data[2]\n",
-    "plt.plot(data[2], Y, label=f'Linear fit: y = {a:.2f} + {b:.2f}x')\n",
+    "a, b = LinearRegressionOne(data[\"horsepower\"], data[\"mpg\"]) # done run your function on attributes 'horsepower' and 'mpg'\n",
+    "Y =  b + a * data[\"horsepower\"]\n",
+    "plt.plot(data[\"horsepower\"], Y, label=f'Linear fit: y = {b:.2f} + {a:.2f}x')\n",
+    "plt.scatter(data[\"horsepower\"], data[\"mpg\"], color=\"blue\")\n",
     "plt.show()"
    ]
   },
@@ -128,7 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task** As you already wrote your own function which calculates simple linear regression, you can now use implementation from sklearn package. This time split your data to train and test set (use first 40 observations as test ones) and plot your results. Compare the results from your own implementation and this one from sklearn. Did you get similar coefficients for your linear function?"
+    "**Task** As you already wrote your own function which calculates simple linear regression, you can now use implementation from sklearn package. This time split your data to train and test set (use first 40 observations as test ones) and plot your results. Compare the results from your own implementation and this one from sklearn. Did you get similar coefficients for your linear function?\n",
+    "\n",
+    "*similar? - The same. Well, 0.000000000000004 off, so... **the same***"
    ]
   },
   {
@@ -140,49 +136,33 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# TODO simple linear regression with the usage of sklearn\n",
-    "def LinearRegressionOneScikit(x, y):\n",
-    "    mean_x = np.mean(x)\n",
-    "    mean_y = np.mean(y)\n",
-    "\n",
-    "    numerator = np.sum((x - mean_x) * (y - mean_y))\n",
-    "    denominator = np.sum((x - mean_x) ** 2)\n",
-    "\n",
-    "    b = numerator / denominator\n",
-    "    a = mean_y - b * mean_x\n",
+    "def LinearRegressionOneScikit(x_train, y_train):\n",
+    "    x_train_reshaped = x_train.values.reshape(-1, 1)\n",
+    "    y_train_reshaped = y_train.values.reshape(-1, 1)\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(x_train_reshaped, y_train_reshaped)\n",
+    "    a = model.coef_[0][0]\n",
+    "    b = model.intercept_[0]\n",
     "    return a, b\n",
     "\n",
+    "X_train, X_test = data[\"horsepower\"][:40], data[\"horsepower\"][40:]\n",
+    "Y_train, Y_test = data[\"mpg\"][:40], data[\"mpg\"][40:]\n",
+    "a_custom, b_custom = LinearRegressionOne(X_train, Y_train)\n",
+    "a_sklearn, b_sklearn = LinearRegressionOneScikit(X_train, Y_train)\n",
     "\n",
-    "X_train, X_test = data[2][:40], data[2][40:]\n",
-    "Y_train, Y_test = data[7][:40], data[7][40:]\n",
+    "Y_custom =  b_custom + a_custom * data[\"horsepower\"]\n",
+    "Y_sklearn = b_sklearn + a_sklearn * data[\"horsepower\"]\n",
     "\n",
-    "# Convert to 2D arrays for sklearn\n",
-    "X_train = X_train.values.reshape(-1, 1)  # Convert to 2D array\n",
-    "X_test = X_test.values.reshape(-1, 1)    # Convert to 2D array\n",
-    "\n",
-    "# Custom linear regression using our function\n",
-    "beta_0_custom, beta_1_custom = LinearRegressionOneScikit(X_train.flatten(), Y_train)\n",
-    "\n",
-    "# Sklearn linear regression\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, Y_train)\n",
-    "beta_0_sklearn = model.intercept_\n",
-    "beta_1_sklearn = model.coef_[0]\n",
-    "\n",
-    "# Make predictions\n",
-    "Y_pred_custom = beta_0_custom + beta_1_custom * X_test.flatten()  # Convert X_test back to 1D for predictions\n",
-    "Y_pred_sklearn = model.predict(X_test)\n",
-    "\n",
-    "# Plot the results\n",
-    "plt.scatter(X_train, Y_train, color='blue', label='Training data')\n",
-    "plt.scatter(X_test, Y_test, color='green', label='Test data')\n",
-    "plt.plot(X_test, Y_pred_custom, color='red', label=f'Custom Linear Fit: y = {beta_0_custom:.2f} + {beta_1_custom:.2f}x')\n",
-    "plt.plot(X_test, Y_pred_sklearn, color='orange', label=f'Sklearn Linear Fit: y = {beta_0_sklearn:.2f} + {beta_1_sklearn:.2f}x')\n",
-    "plt.xlabel('X')\n",
-    "plt.ylabel('Y')\n",
-    "plt.title('Linear Regression Comparison')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.scatter(X_test, Y_test, color=\"lightblue\", label=\"Test Data\")\n",
+    "plt.scatter(X_train, Y_train, color=\"aqua\", label=\"Train Data\")\n",
+    "plt.plot(data[\"horsepower\"], Y_custom, label=f'Linear fit: y = {b:.2f} + {a:.2f}x', color=\"pink\")\n",
+    "plt.plot(data[\"horsepower\"], Y_sklearn, label=f'Linear fit: y = {b:.2f} + {a:.2f}x', color=\"red\")\n",
     "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(f\"Custom Implementation Coefficients: \\n  Slope (a): {a_custom}, Intercept (b): {b_custom}\")\n",
+    "print(f\"Sklearn Implementation Coefficients: \\n  Slope (a): {a_sklearn}, Intercept (b): {b_sklearn}\")"
    ]
   },
   {
@@ -205,21 +185,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "x = data.iloc[:,2:3]\n",
     "y = data.iloc[:,-1]\n",
     "\n",
-    "x['x^2']=x[2]**2\n",
+    "x[10] = x[2]**2  # 'x^2'\n",
     "\n",
-    "\n",
-    "reg = linear_model.LinearRegression().fit(x,y )\n",
+    "reg = linear_model.LinearRegression().fit(x.to_numpy(),y)\n",
     "score = reg.score(x,y)\n",
     "\n",
     "x_line = np.array(np.linspace(0,1,100))\n",
     "y_line = reg.coef_[1]*x_line**2+ reg.coef_[0]*x_line+ reg.intercept_\n",
     "\n",
     "plt.scatter(x[2],y)\n",
-    "plt.plot(x_line,y_line)\n",
-    "plt.show()"
+    "plt.plot(x_line,y_line)"
    ]
   },
   {
@@ -231,10 +210,10 @@
     "x = data.iloc[:,4:5]\n",
     "y = data.iloc[:,-1]\n",
     "\n",
-    "x['x^2']=x[4]**2\n",
-    "x['x^3']=x[4]**3\n",
+    "x[10]=x[4]**2  # 'x^2'\n",
+    "x[11]=x[4]**3  # 'x^3'\n",
     "\n",
-    "reg = linear_model.LinearRegression().fit(x,y )\n",
+    "reg = linear_model.LinearRegression().fit(x,y)\n",
     "score = reg.score(x,y)\n",
     "\n",
     "x_line = np.array(np.linspace(0,1,100))\n",
@@ -281,12 +260,11 @@
     "x = data.iloc[:,:-1]\n",
     "y = data.iloc[:,-1:]\n",
     "\n",
-    "# we add intercept to the vector of x to make it easier to processwith other values\n",
+    "# we add intercept to the vector of x to make it easier to process with other values\n",
     "x['intercept'] = 1 \n",
     "\n",
-    "n_iterations = 0 # TODO set the number of iterations\n",
-    "\n",
-    "learning_rate = 0.0 # TODO set learning rate  \n",
+    "n_iterations = 1000 # TODO set the number of iterations\n",
+    "learning_rate = 0.1 # TODO set learning rate\n",
     "\n",
     "weights = np.zeros((x.shape[1], 1))\n",
     "\n",
@@ -315,11 +293,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MultipleLinearRegression(x, y):\n",
-    "    # TODO here goes your code\n",
+    "def MultipleLinearRegression(x_train, y_train):\n",
+    "    # DONE here goes your code\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(x_train, y_train)\n",
+    "    return model.coef_, model.intercept_\n",
     "    \n",
     "\n",
-    "MultipleLinearRegression(x, y)"
+    "\n",
+    "coefficients, intercept, model = MultipleLinearRegression(x_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(x_test)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Coefficients:\", coefficients)\n",
+    "print(\"Intercept:\", intercept)\n",
+    "print(f\"R^2 Score on Test Set: {r2:.2f}\")\n",
+    "\n"
    ]
   },
   {
