low battery push

--- a/Lab 6 - regresje/regression.ipynb
+++ b/Lab 6 - regresje/regression.ipynb
@@ -185,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = pd.read_csv('car-mpg.csv', header=None) # changed columns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "x = data.iloc[:,2:3]\n",
     "y = data.iloc[:,-1]\n",
@@ -293,18 +294,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "def MultipleLinearRegression(x_train, y_train):\n",
     "    # DONE here goes your code\n",
     "    model = LinearRegression()\n",
     "    model.fit(x_train, y_train)\n",
-    "    return model.coef_, model.intercept_\n",
+    "    return model.coef_, model.intercept_, model\n",
     "    \n",
+    "data = pd.read_csv('car-mpg.csv', header=None)\n",
     "\n",
+    "X = data.iloc[:, :-1]\n",
+    "Y = data.iloc[:, -1]\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=00)\n",
     "\n",
-    "coefficients, intercept, model = MultipleLinearRegression(x_train, y_train)\n",
+    "coefficients, intercept, model = MultipleLinearRegression(X_train, Y_train)\n",
     "\n",
-    "y_pred = model.predict(x_test)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
+    "y_pred = model.predict(X_test)\n",
+    "r2 = r2_score(Y_test, y_pred)\n",
     "\n",
     "print(\"Coefficients:\", coefficients)\n",
     "print(\"Intercept:\", intercept)\n",
@@ -316,7 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** Compare the results from two above methods. Are they similar?"
+    "**Question** Compare the results from two above methods. Are they similar?\n",
+    "\n",
+    "Not at all, I wonder why?"
    ]
   },
   {
@@ -353,20 +362,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy import stats\n",
+    "\n",
     "def getSSR(y,y_pred):\n",
-    "    #TODO\n",
-    "    return \n",
+    "    return np.sum((y_pred - np.mean(y)) ** 2)\n",
     "\n",
     "def getSSE(y,y_pred):\n",
-    "    #TODO\n",
-    "    return \n",
+    "    return np.sum((y - y_pred) ** 2)\n",
     "\n",
     "def getF(y, y_pred, n, m):\n",
-    "    #TODO\n",
-    "    return \n",
+    "    MSR = getSSR(y, y_pred) / (m - 1)\n",
+    "    MSE = getSSE(y, y_pred)   / (n - m)\n",
+    "    return MSR / MSE\n",
     "\n",
     "def getSignificanceRegressionCoefficient(x,y):\n",
-    "    #TODO\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(x, y)\n",
+    "    y_pred = model.predict(x)\n",
+    "    n = len(y)\n",
+    "    m = x.shape[1]\n",
+    "    F = getF(y, y_pred, n, m)\n",
+    "    p = 1 - stats.f.cdf(F, m - 1, n - m)\n",
     "    return F,p"
    ]
   },
@@ -431,7 +447,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "data = pd.read_csv('car-mpg.csv', header=None)\n",
+    "X = data.iloc[:, :-1]\n",
+    "Y = data.iloc[:, -1]\n",
+    "X = X.values\n",
+    "for col in range(X.shape[1]):\n",
+    "    # todo\n",
+    "    X_col = X[:, col].reshape(-1, 1)\n",
+    "    F, p = getSignificanceRegressionCoefficient(X_col, Y)\n",
+    "    print(f\"F= {F},    p={p}\")\n",
+    "\n"
    ]
   },
   {
