all done, methinks

--- a/Lab 6 - regresje/regression.ipynb
+++ b/Lab 6 - regresje/regression.ipynb
@@ -371,8 +371,12 @@
     "    return np.sum((y - y_pred) ** 2)\n",
     "\n",
     "def getF(y, y_pred, n, m):\n",
-    "    MSR = getSSR(y, y_pred) / (m - 1)\n",
-    "    MSE = getSSE(y, y_pred)   / (n - m)\n",
+    "    if m == 1:\n",
+    "        MSR = getSSR(y, y_pred)\n",
+    "        MSE = getSSE(y, y_pred) / (n - 1)\n",
+    "    else:\n",
+    "        MSR = getSSR(y, y_pred) / (m - 1)\n",
+    "        MSE = getSSE(y, y_pred) / (n - m)\n",
     "    return MSR / MSE\n",
     "\n",
     "def getSignificanceRegressionCoefficient(x,y):\n",
@@ -447,13 +451,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO\n",
+    "#DONE\n",
     "data = pd.read_csv('car-mpg.csv', header=None)\n",
     "X = data.iloc[:, :-1]\n",
     "Y = data.iloc[:, -1]\n",
     "X = X.values\n",
     "for col in range(X.shape[1]):\n",
-    "    # todo\n",
     "    X_col = X[:, col].reshape(-1, 1)\n",
     "    F, p = getSignificanceRegressionCoefficient(X_col, Y)\n",
     "    print(f\"F= {F},    p={p}\")\n",
@@ -471,7 +474,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** What is an outlier?"
+    "**Question** What is an outlier?\n",
+    "\n",
+    "*Wartość nie pasująca do większości danych, wyraźnie inna, \"odludek / odrzutek\"*"
    ]
   },
   {
@@ -541,7 +546,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "standard_resid = sm_fr['standard_resid']\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(x=data.index, y=standard_resid)\n",
+    "plt.axhline(y=0, color='r', linestyle='--')\n",
+    "plt.xlabel('Index')\n",
+    "plt.ylabel('Standardized Residuals')\n",
+    "plt.show()"
    ]
   },
   {
@@ -571,7 +582,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "dffits_values = sm_fr['dffits']\n",
+    "n = len(data)\n",
+    "boundary = 2 * np.sqrt(1 / n)\n",
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.vlines(data.index, ymin=0, ymax=dffits_values, color='green', label='DFFITS', alpha=0.7)\n",
+    "plt.axhline(y=boundary, color='r', linestyle='--', label='Upper Boundary (+2√(1/n))')\n",
+    "plt.axhline(y=-boundary, color='r', linestyle='--', label='Lower Boundary (-2√(1/n))')\n",
+    "plt.title('DFFITS for Each Observation')\n",
+    "plt.xlabel('Index')\n",
+    "plt.ylabel('DFFITS Value')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -587,7 +610,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "influential_indices = data.index[(dffits_values > boundary) | (dffits_values < -boundary)]\n",
+    "print(\"Indices of influential observations based on DFFITS:\", influential_indices)"
    ]
   },
   {
@@ -617,7 +641,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "sm_fr = influence.summary_frame()\n",
+    "cooks_d = sm_fr['cooks_d']\n",
+    "\n",
+    "n = len(data)\n",
+    "boundary = 4 / n\n",
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.vlines(data.index, ymin=0, ymax=np.sqrt(cooks_d), color='b', label='Cook\\'s Distance (sqrt)', alpha=0.7)\n",
+    "plt.axhline(y=np.sqrt(boundary), color='r', linestyle='--', label='Boundary (4/n)')\n",
+    "\n",
+    "plt.title('Cook\\'s Distance for Each Observation')\n",
+    "plt.xlabel('Index')\n",
+    "plt.ylabel('Square Root of Cook\\'s Distance')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "influential_indices_cooks = data.index[np.sqrt(cooks_d) > np.sqrt(boundary)]\n",
+    "print(\"Indices of influential observations based on Cook's Distance:\", influential_indices_cooks)"
    ]
   },
   {
@@ -633,7 +674,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "influential_indices_cooks = data.index[np.sqrt(cooks_d) > np.sqrt(boundary)]\n",
+    "print(\"Indices of influential observations based on Cook's Distance:\", influential_indices_cooks)"
    ]
   },
   {
@@ -649,8 +691,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO"
+    "n1 = len(influential_indices)\n",
+    "n2 = len(influential_indices_cooks)\n",
+    "print(n1)\n",
+    "print(n2)\n",
+    "duplicates = list(set(influential_indices) & set(influential_indices_cooks))\n",
+    "print(duplicates)\n",
+    "print(len(duplicates))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Cooks distance list is a subset of the previous one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
