--- a/Lab 6 - regresje/logistic_regression.ipynb
+++ b/Lab 6 - regresje/logistic_regression.ipynb
@@ -19,6 +19,10 @@
    "source": [
     "## 1. Logistic regression\n",
     "\n",
+    "Autorstwa:\n",
+    "Julia Samp 151775\n",
+    "Wojciech Kot 151879\n",
+    "\n",
     "**Question** What is logistic regression? Does it really solve the regression problems?\n",
     "\n",
     "*Nasza odpowiedź*\n",
