--- a/Lab 6 - regresje/regression.ipynb
+++ b/Lab 6 - regresje/regression.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## REGRESSION"
+    "## REGRESSION\n",
+    "\n",
+    "\n",
+    "Autorstwa:\n",
+    "Julia Samp 151775\n",
+    "Wojciech Kot 151879"
    ]
   },
   {
