--- a/Sieci - Notebooki/Kopia_notatnika_snum_lab_pytorch.ipynb
+++ b/Sieci - Notebooki/Kopia_notatnika_snum_lab_pytorch.ipynb
@@ -318,7 +318,7 @@
     "z = torch.zeros(2,2)\n",
     "\n",
     "# alokacja jedynek\n",
-    "o = torch.ones(2,2)\n",
+    "o = torch.ones_like(z)\n",
     "\n",
     "print(z)\n",
     "print(o)"
